--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@supabase/supabase-js": "^2.47.10",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
@@ -31,11 +33,14 @@
     "react-icon-cloud": "^4.1.6",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
