--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icon-cloud": "^4.1.6",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
+    "react-use": "^17.6.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
