--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -38,6 +38,7 @@
     "react-icon-cloud": "^4.1.6",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
+    "react-scroll": "^1.9.0",
     "react-use": "^17.6.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
